Discovery&LB/LoadBalancer.yml

apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: sample-app
  ports:
  - name: "http-port"
    protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30082
