Discovery&LB/externalip.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ClusterIP
  externalIPs:
    - 10.146.0.19
    - 10.146.0.20
  selector:
    app: sample-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
