Discovery&LB/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: sample-app
  ports:
  - name: http-port
    protocol: TCP
    port: 8080      # ClusterIPとしてListenする番号
    targetPort: 80  # selector.app に対して転送する番号
    nodePort: 30080 # 全Kubernetes Nodeで受け取る番号
